NIHVIVO-2041: Extra padding for individual list section in menu pages when users zoom out pages in Firefox has been fixed.

--- a/themes/wilma/css/wilma.css
+++ b/themes/wilma/css/wilma.css
@@ -1072,7 +1072,7 @@ ul#alpha-browse-individuals .count-classes {
 }
 /* BROWSE INDIVIDUALS------>  */
 #individuals-in-class {
-    width: 630px;
+    width: 629px;
     border: 1px solid #dde4e3;
     background-color: #fff;
 }
